--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 obj/Debug/Angille.csproj.AssemblyReference.cache
 .vs/slnx.sqlite
 .vs/Angille/v17/.suo
+obj/
+bin/
